[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stamm-py-sdk"
version = "0.1"
description = "Python SDK for STAMM multi-tier AMM pools on Algorand"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "py-algorand-sdk>=2.0",
]

[tool.setuptools.packages.find]
include = ["stamm*"]

[tool.setuptools.package-data]
stamm = ["py.typed"]
